--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aniso8601==9.0.1
 annotated-types==0.7.0
+asgiref==3.8.1
+attrs==25.1.0
 autocommand==2.2.2
 backports.tarfile==1.2.0
 blinker==1.8.2
@@ -10,9 +12,13 @@ colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.2.0
 Flask==3.0.3
-Flask-JWT-Extended==4.6.0
 Flask-RESTful==0.3.10
+flask-restx==1.3.0
+flask-swagger-ui==4.11.1
+greenlet==3.1.1
+h11==0.14.0
 idna==3.7
+importlib_resources==6.5.2
 inflect==7.3.1
 itsdangerous==2.2.0
 jaraco.collections==5.0.1
@@ -20,18 +26,26 @@ jaraco.context==5.3.0
 jaraco.functools==4.0.1
 jaraco.text==3.12.1
 Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 MarkupSafe==2.1.5
 more-itertools==10.3.0
 portend==3.2.0
+psycopg2==2.9.10
 pydantic==2.8.2
 pydantic_core==2.20.1
 PyJWT==2.8.0
 pymongo==4.8.0
 python-dotenv==1.0.1
 pytz==2024.1
+referencing==0.36.2
+rpds-py==0.22.3
+setuptools==75.8.0
 six==1.16.0
+SQLAlchemy==2.0.37
 tempora==5.6.0
 typeguard==4.3.0
 typing_extensions==4.12.2
+uvicorn==0.34.0
 Werkzeug==3.0.3
 zc.lockfile==3.0.post1
