--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.2.0
+et_xmlfile==2.0.0
 Flask==3.0.3
 greenlet==3.1.1
 h11==0.14.0
@@ -26,11 +27,15 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 MarkupSafe==2.1.5
 more-itertools==10.3.0
+numpy==2.2.3
+openpyxl==3.1.5
+pandas==2.2.3
 portend==3.2.0
 psycopg2==2.9.10
 pydantic==2.8.2
 pydantic_core==2.20.1
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 referencing==0.36.2
@@ -41,6 +46,7 @@ SQLAlchemy==2.0.37
 tempora==5.6.0
 typeguard==4.3.0
 typing_extensions==4.12.2
+tzdata==2025.1
 uvicorn==0.34.0
 Werkzeug==3.0.3
 zc.lockfile==3.0.post1
